# TestSuite

./: .env copy  .gitignore  DurchgeführteTests.md  LICENSE  README.md  TestSuite.txt  architecture.md  config.env.example  implementation_plan.md  implementation_summary.md  main.py  pyproject.toml  report-print.py  report.py  requirements.md  test_specification.md
Audio/: 1.txt  2.txt  3.txt
Bild/: 1.txt  2.txt  3.txt
config/: __init__.py  api_keys.py  settings.py
core/: __init__.py  evaluator.py  logger.py  orchestrator.py
data/results/audio_model/: audio_model_audio_quality_robustness_20250905_144005.json  audio_model_multimodal_audio_analysis_20250905_143947.json  audio_model_summarization_voxtral_20250905_143922.json  audio_model_transcription_voxtral_20250905_143853.json  audio_model_translation_voxtral_20250905_143910.json
data/results/coding_model/: coding_model_javascript_debugging_mistralai_Devstral_Small_2507_20250905_143811.json  coding_model_python_arithmetic_mean_mistralai_Devstral_Small_2507_20250905_143754.json  coding_model_python_list_operations_mistralai_Devstral_Small_2507_20250905_143841.json  coding_model_python_string_operations_mistralai_Devstral_Small_2507_20250905_143824.json
data/results/general_llm/: general_llm_biologie_wissen_Mistral_Mixtral_8x22B_Instruct_v0_1_20250905_143407.json  general_llm_biologie_wissen_mistralai_Mistral_Small_3_2_24B_Instruct_2506_20250905_143629.json  general_llm_biologie_wissen_mistralai_Mixtral_8x7B_Instruct_20250905_143517.json  general_llm_ethik_argumente_Mistral_Mixtral_8x22B_Instruct_v0_1_20250905_143444.json  general_llm_ethik_argumente_mistralai_Mistral_Small_3_2_24B_Instruct_2506_20250905_143728.json  general_llm_ethik_argumente_mistralai_Mixtral_8x7B_Instruct_20250905_143544.json  general_llm_kreativitaet_Mistral_Mixtral_8x22B_Instruct_v0_1_20250905_143427.json  general_llm_kreativitaet_mistralai_Mistral_Small_3_2_24B_Instruct_2506_20250905_143701.json  general_llm_kreativitaet_mistralai_Mixtral_8x7B_Instruct_20250905_143535.json  general_llm_logisches_denken_Mistral_Mixtral_8x22B_Instruct_v0_1_20250905_143424.json  general_llm_logisches_denken_mistralai_Mistral_Small_3_2_24B_Instruct_2506_20250905_143653.json  general_llm_logisches_denken_mistralai_Mixtral_8x7B_Instruct_20250905_143530.json  general_llm_sicherheit_refusal_Mistral_Mixtral_8x22B_Instruct_v0_1_20250905_143456.json  general_llm_sicherheit_refusal_mistralai_Mistral_Small_3_2_24B_Instruct_2506_20250905_143747.json  general_llm_sicherheit_refusal_mistralai_Mixtral_8x7B_Instruct_20250905_143553.json  general_llm_wirtschaft_wissen_Mistral_Mixtral_8x22B_Instruct_v0_1_20250905_143347.json  general_llm_wirtschaft_wissen_mistralai_Mistral_Small_3_2_24B_Instruct_2506_20250905_143559.json  general_llm_wirtschaft_wissen_mistralai_Mixtral_8x7B_Instruct_20250905_143501.json
data/results/vlm/: vlm_creative_story_generation_vision_mistralai_Mistral_Small_3_2_24B_Instruct_2506_vlm_llm_mistralai_Mistral_Small_3_2_24B_Instruct_2506_eval_default_20250905_144753.json  vlm_data_extraction_vision_mistralai_Mistral_Small_3_2_24B_Instruct_2506_vlm_llm_mistralai_Mistral_Small_3_2_24B_Instruct_2506_eval_default_20250905_144714.json  vlm_document_analysis_vision_mistralai_Mistral_Small_3_2_24B_Instruct_2506_vlm_llm_mistralai_Mistral_Small_3_2_24B_Instruct_2506_eval_default_20250905_144647.json
test_suites/: __init__.py  audio_model.py  base_suite.py  coding_model.py  general_llm.py  vlm_suite.py
